tests/fixtures/realworld/istio/valid/case-019-RW-8-19-DestinationRule-valid-with-connection-pool-settings.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: connectionpool-destination
  namespace: default
spec:
  host: reviews
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        h2UpgradePolicy: UPGRADE
        http1MaxPendingRequests: 100
